--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -23,6 +23,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
+allow 2001:4b98:dc0:43:f816:3eff:feb8:ae3b;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -105,6 +106,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -161,6 +163,7 @@ allow 2605:6400:10:44f::1;
 allow 2605:6400:10:4ed:1:1:1:1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
+allow 2605:6400:10:7ce:1211:2284:56a3:1121;
 allow 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
@@ -267,7 +270,6 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
