--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -77,6 +77,7 @@ set_real_ip_from 107.189.5.19;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.6.246;
+set_real_ip_from 107.189.6.57;
 set_real_ip_from 107.189.7.114;
 set_real_ip_from 107.189.7.141;
 set_real_ip_from 107.189.7.144;
@@ -129,6 +130,7 @@ set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.180.187.117;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.95.59.92;
 set_real_ip_from 141.95.59.93;
 set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.44.133.81;
@@ -156,7 +158,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -699,7 +700,6 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -1030,6 +1030,7 @@ set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
+set_real_ip_from 2605:6400:30:f763::2;
 set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 set_real_ip_from 2605:6400:30:f7ca::2;
@@ -1584,7 +1585,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.197.246.228;
+set_real_ip_from 54.235.75.143;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
