--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,6 +6,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -157,7 +158,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.247.72.192;
@@ -239,7 +239,6 @@ set_real_ip_from 179.43.167.205;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.204.85.246;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -701,7 +700,6 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -905,6 +903,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
@@ -929,6 +928,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -1397,6 +1397,7 @@ set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
+set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:bb20::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
@@ -1437,6 +1438,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.214.104.33;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.114.41.119;
@@ -1460,6 +1462,7 @@ set_real_ip_from 38.152.53.246;
 set_real_ip_from 38.152.53.250;
 set_real_ip_from 38.152.53.251;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 41.216.183.87;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1554,6 +1557,7 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
@@ -1606,6 +1610,7 @@ set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.102;
+set_real_ip_from 66.78.40.182;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
@@ -1645,7 +1650,6 @@ set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.119;
-set_real_ip_from 82.153.138.182;
 set_real_ip_from 82.153.138.208;
 set_real_ip_from 82.153.138.24;
 set_real_ip_from 82.221.128.191;
