--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,4 +1,3 @@
-deny 100.27.84.176;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 102.130.127.117;
@@ -7,6 +6,7 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -114,6 +114,7 @@ deny 109.70.100.68;
 deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
+deny 118.163.74.160;
 deny 121.160.200.13;
 deny 121.78.28.175;
 deny 123.253.35.32;
@@ -809,6 +810,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -1080,6 +1082,8 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
+deny 2a02:418:6017::147;
+deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
@@ -1387,6 +1391,7 @@ deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
+deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
@@ -1436,6 +1441,7 @@ deny 31.133.0.210;
 deny 31.42.185.134;
 deny 35.0.127.52;
 deny 37.114.37.81;
+deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1554,7 +1560,6 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
@@ -1585,6 +1590,7 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
+deny 52.86.248.203;
 deny 5.34.182.203;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1752,6 +1758,8 @@ deny 94.177.106.55;
 deny 94.177.106.59;
 deny 94.228.163.25;
 deny 94.228.169.70;
+deny 94.230.208.147;
+deny 94.230.208.148;
 deny 94.32.66.15;
 deny 95.128.43.164;
 deny 95.142.161.63;
